# sphinx-graph

./: .coverage  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .vulture-whitelist.py  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  renovate.json
.github/: dependabot.yml  renovate.json5
.github/workflows/: ci.yaml  coverage.yaml  pre-commit-update.yml  publish.yml  release.yml
docs/: .gitignore  Makefile  conf.py  index.md  index.rst
docs/query/: __init__.py  family.py
docs/src/: api.rst  glossary.rst  setup.rst  table.rst  vertex.rst
docs/src/example/: index.md  index.rst
docs/src/example/mrd/: mrd-001.rst
docs/src/example/sys/: index.rst  sys-001.md  sys-001.rst  sys-002.rst  sys-003.rst  sys-004.rst
docs/src/example/usr/: usr-001.rst
example/: conf.py  index.rst
example/src/sys/: index.rst  sys-003.rst
example/src/usr/: index.rst
examples/basic/: conf.py
examples/basic/_build/doctrees/: environment.pickle  index.doctree
examples/basic/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
examples/basic/_build/html/_sources/: index.rst.txt
examples/basic/src/usr/: usr-001.rst
examples/fingerprints/: conf.py  index.rst
examples/fingerprints/src/mrd/: mrd-001.rst
examples/fingerprints/src/sys/: sys-001.rst  sys-002.rst  sys-003.rst
examples/fingerprints/src/usr/: index.rst  usr-001.rst
examples/read-the-docs/: conf.py  index.rst
src/sphinx_graph/: __init__.py  _setup.py  config.py  context.py  directive.py  events.py  format.py  formatting.py  info.py  layout.py  node.py  parse.py  state.py  util.py
src/sphinx_graph/directives/: __init__.py  vertex.py
src/sphinx_graph/directives/vertex/: __init__.py  context.py  directive.py  events.py  info.py  layout.py  node.py  state.py
src/sphinx_graph/static/: sphinx-graph.css
src/sphinx_graph/table/: __init__.py  directive.py  events.py  info.py  node.py  registration.py  state.py
src/sphinx_graph/vertex/: __init__.py  config.py  directive.py  events.py  info.py  layout.py  node.py  parse.py  query.py  registration.py  state.py
src/sphinx_todo/: __init__.py  config.py  util.py
tests/: conftest.py  test_config.py  test_content.py  test_graph.py  test_helloworld.py  test_layout.py  test_parse.py  test_regressions.py  test_state.py  test_table.py  test_util.py  test_vertex.py
tests/roots/: .gitignore
tests/roots/test-cycle/: index.rst
tests/roots/test-duplicate-ids/: index.rst
tests/roots/test-empty/: index.rst
tests/roots/test-fingerprints/: conf.py  index.rst
tests/roots/test-fingerprints-wrong/: index.rst
tests/roots/test-include/: conf.py  index.rst
tests/roots/test-include/features/: feat-001.feature
tests/roots/test-incorrect-fingerprint/: index.rst
tests/roots/test-invalid-parent/: index.rst
tests/roots/test-layout/: index.rst
tests/roots/test-layout-custom/: conf.py  custom_layout.py  index.rst
tests/roots/test-layout-unknown/: conf.py  index.rst
tests/roots/test-missing-fingerprint/: index.rst
tests/roots/test-missing-required-parent/: conf.py  index.rst
tests/roots/test-nested-headers/: conf.py  index.rst
tests/roots/test-nested-headers/src/: somefile.md
tests/roots/test-parallel/: index.rst
tests/roots/test-parallel/src/: 01.rst  02.rst  03.rst  04.rst  05.rst
tests/roots/test-regex/: conf.py  index.rst
tests/roots/test-self-reference/: index.rst
tests/roots/test-table/: index.rst
tests/roots/test-table-invalid-toml/: index.rst
tests/roots/test-table-query/: conf.py  index.rst
tests/roots/test-table-query-alt/: conf.py  index.rst
tests/roots/test-table-query-alt/queries/: __init__.py
tests/roots/test-table-query-unknown/: index.rst
tests/roots/test-table-query/queries/: __init__.py  _functions.py
tests/roots/test-tags/: conf.py  index.rst
tests/roots/test-vertex/: index.rst
